<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".fragment.ProfileFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvUpdateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/str_update_profile"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:id="@+id/rrProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="right|center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUpdateProfile">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cvProfile"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:src="@drawable/ic_profile"
                app:civ_border_width="@dimen/_1sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCamera"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignEnd="@id/cvProfile"
                android:layout_alignBottom="@id/cvProfile"
                android:layout_marginEnd="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_3ssp"
                android:src="@drawable/edit"
                android:tint="@color/blue"
                app:tint="@color/blue" />


        </RelativeLayout>


        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edt_rectangle"
            android:hint="@string/str_enter_name"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_10sdp"
            android:singleLine="true"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintTop_toBottomOf="@id/rrProfile" />


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edt_rectangle"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/str_enter_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_10sdp"
            android:singleLine="true"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintTop_toBottomOf="@id/edtName" />


        <EditText
            android:id="@+id/edtDob"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edt_rectangle"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/str_select_dob"
            android:inputType="none"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_10sdp"
            android:singleLine="true"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintTop_toBottomOf="@id/edtEmail" />


        <LinearLayout
            android:id="@+id/llGender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/rectangle_grey"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/edtDob">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvMale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_male"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />


            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/grey"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFemale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_female"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />


            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/grey"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvOther"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_other"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />


        </LinearLayout>

        <TextView
            android:id="@+id/btn_UpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/rectangle_button"
            android:gravity="center"
            android:padding="@dimen/_15sdp"
            android:text="@string/str_update_profile"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/llGender"

            />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
