<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.DashboardActivity">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@id/llBottom"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#FFFFFF"
            android:elevation="5dp"
            android:orientation="horizontal"
            android:weightSum="6"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/llHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ivHome"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_home_24"
                    android:contentDescription="@string/app_name"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/str_home"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_person_24"
                    android:contentDescription="@string/app_name"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/str_profile"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llContacts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnContacts"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:backgroundTint="@color/grey"
                    android:gravity="center"
                    android:text="Contacts"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ivHistory"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_watch_later_24"
                    android:contentDescription="@string/app_name"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/str_history"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNotifications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ivNotifications"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_notifications_24"
                    android:contentDescription="@string/app_name"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvNotifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/str_notifications"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSettings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ivSettings"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_settings_24"
                    android:contentDescription="@string/app_name"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/str_settings"
                    android:textColor="@color/grey"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
